--- a/main.css
+++ b/main.css
@@ -125,12 +125,25 @@ h1 {
 /* HOMEPAGE */
 
 #homepage {
-    position: absolute;
-    background-color: black;
+    /* background-image: url(./assets/Dan\ Lambert\ Home.png); */
     width: 100vw;
-    height: 100em;
-    overflow: hidden;
+    /* background-position-x: center;
+    background-repeat: no-repeat;
+    background-size: cover; */
+    height: 450em;
+    max-width: 100%;
+    max-height: 450em;
+    background-color: black;
     display: none;
+}
+
+.homeimg {
+    width: 100%;
+    height: 100%;
+    max-width: 100%;
+    max-height: 450em;
+    object-fit: contain;
+    object-position: top;
 }
 
 #section1 {
